--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+        integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Form Validator</title>
+    <title>User Words</title>
 </head>
 
 <body>
+    <i class="fa fa-microphone"></i>
+
+    <h1>Guess a Number Between 1 - 100</h1>
+
+    <h3>Speak a number into your microphone</h3>
+
+    <div id="msg" class="msg">
+        <!-- <div>You said:</div>
+        <span class="box">20</span>
+        <div>Go Higher!</div> -->
+    </div>
 
     <script src="script.js"></script>
 </body>
